# personal-workspace-agent

./: README.md  main.py  pyproject.toml
server/: crypto_tracker.py  email_server.py  file_manager.py  system_monitor.py  weather.py
