[project]
name = "personal-workspace-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "google-genai",
  "python-dotenv",
  "requests",
  "pydantic",
  "chromadb",
  "pytest",
  "mcp[cli]>=1.18.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
